# object_tracking_cplusplus

./: .gitignore  CMakeLists.txt  README.md  tracking.cpp
libs/: libowi.cpp  libowi.h
